Update functions for replication

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(averageSimilarity)
 export(complierATE)
 export(generateMarginalEffect)
 export(pkgTest)
+export(plotCorrectness)
 export(plotSimilarity)
 export(plotSimilarityCorr)
 export(regressionComparison)
