Add new files and edit old functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(ATEcutoff)
 export(averageSimilarity)
 export(complierATE)
+export(createWordEmbeddings)
 export(generateMarginalEffect)
 export(pkgTest)
 export(plotCorrectness)
 export(plotSimilarity)
 export(plotSimilarityCorr)
+export(prepText)
 export(regressionComparison)
 export(similarityMeasures)
