Add new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ATEcutoff)
 export(IVcomparison)
 export(averageSimilarity)
+export(compareK)
 export(complierATE)
 export(createWordEmbeddings)
 export(generateMarginalEffect)
